
	This file is in Unicode charset, with UTF-8 encoding.

	Sections headed '[Incompat <version>]' and '[Major <version>]'
	are particularly important.  They describe changes that are
	incompatible with earlier releases or are significantly
	different.

	!!!!!!!! READ THE RELEASE.NOTES !!!!!!!!

-------------------------------------------------------------------------------

	2015-02-25

	* Fix the lexer to handle MIME multipart messages properly when the
	  boundary ended in "--".  The parser would previously never find the
	  MIME parts because it mistook all boundaries ending in two dashes to
	  be the final boundary of the multipart, rather than checking if the
	  two dashes were extra.  Add a test case, t.lexer.boundary--.
	  Reported by Matt Garretson to the bogofilter mailing list today.

	2014-07-10

	* Take patch from Julius Plenz to fix a bug in the charset converter
	  that causes truncation of messages in pass-through mode in rare
	  circumstances, for instance, if binary data is misdeclared as
	  text/html.  Also add his test case, t.passthrough-truncation.

	2013-11-30

	* Updated autoconf/automake stuff so that tests work properly with
	  automake versions that default to running parallel-tests.

	2013-07-06

	* Relicensed all security announcements under a dual-license, at the
	  user's option, to ease distribution without repackaging:

	  - Creative Commons Attribution-NoDerivs 3.0 Germany License
	    (CC BY-ND 3.0)
	  - GNU General Public License v3 or newer (GPL v3+).

1.2.4	2013-07-01 (released)

	2013-06-28
	* Fix three crashes in command line and environment variable parsers
	  that caused NULL pointer dereferences with long option variants
	  of bogofilter --syslog-tag, or bogoutil --timestamp-date, or when
	  bogotune -M<file> cannot derive the bogofilter directory.
	  Reported by Alexandre Rebert, found with Mayhem tool.

	* Add getopt_long_chk(), a getopt_long variant that checks if the